# cuda-image-rotate

./: CMakeLists.txt  README.md  kernel.cu  main.cpp
